# data-etl-platform

./: .env.example  .gitignore  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
dags/: countries_pipeline.py  crypto_pipeline.py  weather_pipeline.py
etl/: config.py
etl/extractors/: base.py  countries.py  crypto.py  weather.py
etl/loaders/: staging.py
etl/transformers/: countries.py  crypto.py  weather.py
sql/reports/: 01_crypto_market_dashboard.sql  02_crypto_volatility_analysis.sql  03_weather_hemispheric_analysis.sql  04_country_weather_enrichment.sql  05_data_quality_report.sql
sql/schema/: 01_schemas.sql  02_staging.sql  03_dimensions.sql  04_facts.sql
tests/: smoke_test_extractors.py  smoke_test_pipeline.py  test_extractors.py
